New-Upload-1755854042013/objects/TC_Adminified_UserGroup__c.object
<CustomObject>
    <fields>
        <fullName>TC_Adminified_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adminified Organisation</label>
        <referenceTo>TC_Adminified_Organization__c</referenceTo>
        <relationshipLabel>User Groups</relationshipLabel>
        <relationshipName>UserGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_Adminified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adminified User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Groups</relationshipLabel>
        <relationshipName>UserGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Is_Named_Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Named Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_User_Organization_Name__c</fullName>
        <label>User Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TC Adminified User Group</label>
    <nameField>
        <displayFormat>UG-{0000}</displayFormat>
        <label>User Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Adminified User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>